#4261: sonar